--- a/packages/quicktype-core/package.json
+++ b/packages/quicktype-core/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "quicktype-core",
+    "name": "quicktype-core-wosherco",
     "version": "18.0.15",
     "description": "The quicktype engine as a library",
     "license": "Apache-2.0",
