--- a/packages/quicktype-graphql-input/package.json
+++ b/packages/quicktype-graphql-input/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "quicktype-graphql-input",
+    "name": "quicktype-graphql-input-wosherco",
     "version": "18.0.15",
     "package": "Package for using GraphQL as an input language to quicktype",
     "license": "Apache-2.0",
