--- a/package.json
+++ b/package.json
@@ -1,81 +1,84 @@
 {
-    "name": "quicktype-wosherco",
-    "version": "23.0.171",
-    "license": "Apache-2.0",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "repository": "https://github.com/quicktype/quicktype",
-    "engines": {
-        "node": ">=18.12.0"
-    },
-    "scripts": {
-        "pub": "script/publish.sh",
-        "build": "npm run clean && npm run build --workspaces --if-present && tsc",
-        "test": "script/test",
-        "start": "script/watch",
-        "clean": "rm -rf dist *~ packages/*/{dist,out}",
-        "debug": "node --inspect-brk --max-old-space-size=4096 ./dist/index.js",
-        "lint": "eslint src/** packages/*/src/**",
-        "lint:fix": "eslint --fix src/** packages/*/src/**"
-    },
-    "workspaces": [
-        "./packages/quicktype-core",
-        "./packages/quicktype-graphql-input",
-        "./packages/quicktype-typescript-input",
-        "./packages/quicktype-vscode"
-    ],
-    "dependencies": {
-        "@glideapps/ts-necessities": "^2.2.3",
-        "chalk": "^4.1.2",
-        "collection-utils": "^1.0.1",
-        "command-line-args": "^5.2.1",
-        "command-line-usage": "^7.0.1",
-        "cross-fetch": "^4.0.0",
-        "graphql": "^0.11.7",
-        "lodash": "^4.17.21",
-        "moment": "^2.30.1",
-        "quicktype-core": "20.0.12",
-        "quicktype-graphql-input": "20.0.2",
-        "quicktype-typescript-input": "20.0.2",
-        "readable-stream": "^4.5.2",
-        "stream-json": "1.8.0",
-        "string-to-stream": "^3.0.1",
-        "typescript": "4.9.5"
-    },
-    "devDependencies": {
-        "@tsconfig/node18": "^1.0.1",
-        "@types/command-line-args": "^5.2.0",
-        "@types/command-line-usage": "^5.0.4",
-        "@types/graphql": "^0.11.7",
-        "@types/lodash": "^4.17.0",
-        "@types/semver": "^7.5.0",
-        "@types/shelljs": "^0.8.15",
-        "@types/stream-json": "^1.7.3",
-        "@types/urijs": "^1.19.25",
-        "@types/wordwrap": "^1.0.3",
-        "@typescript-eslint/eslint-plugin": "^6.3.0",
-        "@typescript-eslint/parser": "^6.3.0",
-        "ajv": "^5.5.2",
-        "deep-equal": "^2.2.3",
-        "esbuild": "^0.20.2",
-        "eslint": "^8.57.0",
-        "eslint-config-canonical": "^41.1.7",
-        "eslint-config-prettier": "^6.10.0",
-        "eslint-import-resolver-typescript": "^3.6.1",
-        "eslint-plugin-canonical": "^3.4.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-json": "^3.1.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "exit": "^0.1.2",
-        "prettier": "^3.2.5",
-        "promise-timeout": "^1.3.0",
-        "semver": "^7.5.4",
-        "shelljs": "^0.8.5",
-        "ts-node": "^10.9.2",
-        "watch": "^1.0.2"
-    },
-    "files": [
-        "dist"
-    ],
-    "bin": "dist/index.js"
+  "name": "quicktype-wosherco",
+  "version": "23.0.171-fix",
+  "license": "Apache-2.0",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "repository": "https://github.com/quicktype/quicktype",
+  "engines": {
+    "node": ">=18.12.0"
+  },
+  "scripts": {
+    "pub": "script/publish.sh",
+    "build": "npm run clean && npm run build --workspaces --if-present && tsc",
+    "test": "script/test",
+    "start": "script/watch",
+    "clean": "rm -rf dist *~ packages/*/{dist,out}",
+    "debug": "node --inspect-brk --max-old-space-size=4096 ./dist/index.js",
+    "lint": "eslint src/** packages/*/src/**",
+    "lint:fix": "eslint --fix src/** packages/*/src/**"
+  },
+  "workspaces": [
+    "./packages/quicktype-core",
+    "./packages/quicktype-graphql-input",
+    "./packages/quicktype-typescript-input",
+    "./packages/quicktype-vscode"
+  ],
+  "dependencies": {
+    "@glideapps/ts-necessities": "^2.2.3",
+    "chalk": "^4.1.2",
+    "collection-utils": "^1.0.1",
+    "command-line-args": "^5.2.1",
+    "command-line-usage": "^7.0.1",
+    "cross-fetch": "^4.0.0",
+    "graphql": "^0.11.7",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "quicktype-core": "20.0.12",
+    "quicktype-graphql-input": "20.0.2",
+    "quicktype-typescript-input": "20.0.2",
+    "readable-stream": "^4.5.2",
+    "stream-json": "1.8.0",
+    "string-to-stream": "^3.0.1",
+    "typescript": "4.9.5",
+    "quicktype-core-wosherco": "23.0.171-fix",
+    "quicktype-graphql-input-wosherco": "23.0.171-fix",
+    "quicktype-typescript-input-wosherco": "23.0.171-fix"
+  },
+  "devDependencies": {
+    "@tsconfig/node18": "^1.0.1",
+    "@types/command-line-args": "^5.2.0",
+    "@types/command-line-usage": "^5.0.4",
+    "@types/graphql": "^0.11.7",
+    "@types/lodash": "^4.17.0",
+    "@types/semver": "^7.5.0",
+    "@types/shelljs": "^0.8.15",
+    "@types/stream-json": "^1.7.3",
+    "@types/urijs": "^1.19.25",
+    "@types/wordwrap": "^1.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "ajv": "^5.5.2",
+    "deep-equal": "^2.2.3",
+    "esbuild": "^0.20.2",
+    "eslint": "^8.57.0",
+    "eslint-config-canonical": "^41.1.7",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-canonical": "^3.4.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "exit": "^0.1.2",
+    "prettier": "^3.2.5",
+    "promise-timeout": "^1.3.0",
+    "semver": "^7.5.4",
+    "shelljs": "^0.8.5",
+    "ts-node": "^10.9.2",
+    "watch": "^1.0.2"
+  },
+  "files": [
+    "dist"
+  ],
+  "bin": "dist/index.js"
 }
