--- a/packages/quicktype-core/package.json
+++ b/packages/quicktype-core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "quicktype-core-wosherco",
-    "version": "23.0.171",
+    "version": "23.0.171-fix",
     "description": "The quicktype engine as a library",
     "license": "Apache-2.0",
     "main": "dist/index.js",
