--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ test/fixtures/cjson/list.*
 test/fixtures/rust/target
 test/fixtures/java/target
 test/fixtures/java-lombok/target
+test.json
 
 packages/*/dist
 packages/*/node_modules
