--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "quicktype-wosherco",
-    "version": "23.0.171-fix8",
+    "version": "23.0.173",
     "license": "Apache-2.0",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
